[package]
name = "sce"
version = "0.0.0"
edition = "2021"

[dependencies]

[profile.dev]
opt-level = 0
overflow-checks = true
panic = "unwind"
debug = true
rpath = true
debug-assertions = true
incremental = true
lto = false

[profile.release]
opt-level = 3
overflow-checks = false
panic = "abort"
debug = false
rpath = false
debug-assertions = false
incremental = false
lto = true
